--- a/website.html
+++ b/website.html
@@ -93,10 +93,18 @@
     </div>
     <div id="about" class="container">
         <h2>About</h2>
-        <p>This website combines the legendary worlds of Star Wars and Marvel with cybersecurity and creative content.</p>
+        <p>Welcome! I am a cybersecurity enthusiast with a strong passion for technology and learning. Here are a few highlights about me:</p>
+        <ul>
+            <li>Studied Cybersecurity and developed a deep understanding of ethical hacking and defense strategies.</li>
+            <li>Served as the Treasurer for the Ethical Hacking Society, managing finances and events for the group.</li>
+            <li>Worked as a mentor, guiding others in their learning journeys and fostering a collaborative environment.</li>
+            <li>Hobbies: Playing Yu-Gi-Oh!, gaming, and watching movies, blending strategy, fun, and storytelling.</li>
+        </ul>
+        <p>Feel free to explore my site for blogs, walkthroughs, and more!</p>
     </div>
     <footer>
         <p>&copy; 2024 Galaxy Adventures. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
+
