--- a/website.html
+++ b/website.html
@@ -38,6 +38,13 @@
             max-width: 1200px;
             margin: auto;
         }
+        .blog-post {
+            margin-bottom: 20px;
+        }
+        .timestamp {
+            font-size: 0.9em;
+            color: #888;
+        }
         footer {
             text-align: center;
             padding: 10px;
@@ -81,7 +88,46 @@
     <div id="blog" class="container">
         <h2>Blog</h2>
         <p>Stay tuned for the latest updates and articles.</p>
-        <!-- Blog content goes here -->
+        <div class="blog-post">
+            <h3>Visiting Schools to Help with UCAS and Personal Statements</h3>
+            <p class="timestamp">Posted on: October 15, 2024</p>
+            <p>Guiding 6th-year students with their UCAS applications and personal statements was a rewarding experience. During these sessions, I focused on helping students articulate their aspirations and highlight their achievements effectively. It was fulfilling to see them gain confidence in presenting their academic journeys and future goals.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Presenting Cybersecurity to 3rd and 4th Years</h3>
+            <p class="timestamp">Posted on: November 2, 2024</p>
+            <p>Engaging with 3rd and 4th-year students was an opportunity to inspire future technologists. I presented the fascinating aspects of the Cyber Security and Networks course, emphasizing its real-world applications and career prospects. It was exciting to see their enthusiasm grow as they learned about protecting digital landscapes.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Hosting a Cybersecurity Murder Mystery</h3>
+            <p class="timestamp">Posted on: November 18, 2024</p>
+            <p>As part of a campus event, I organized a cybersecurity-themed murder mystery. Participants had to solve clues tied to basic cybersecurity principles, such as encryption and network forensics, to unveil the culprit. This event not only entertained but also educated attendees in a hands-on manner.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Running Campus Tours and Open Days</h3>
+            <p class="timestamp">Posted on: December 1, 2024</p>
+            <p>Leading campus tours and open days allowed me to connect with prospective students and their families. I provided insights into university life and highlighted the excellent resources and support systems available, ensuring that visitors left with a positive and informed impression of our institution.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Interactive Workshops for New Students</h3>
+            <p class="timestamp">Posted on: September 10, 2024</p>
+            <p>Welcoming new students with interactive workshops was a great way to help them settle into university life. These sessions included icebreakers, team challenges, and practical tips on succeeding academically and socially, creating a strong foundation for their university experience.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Creating and Delivering Presentations for the Ethical Hacking Society</h3>
+            <p class="timestamp">Posted on: October 5, 2024</p>
+            <p>As a member of the Ethical Hacking Society, I developed and presented engaging sessions about ethical hacking. These presentations included live demonstrations, such as SQL injection examples, and fun challenges, inspiring attendees to think critically about cybersecurity threats and defenses.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Work on My Honours Project</h3>
+            <p class="timestamp">Posted on: November 25, 2024</p>
+            <p>My honours project focused on detecting and preventing evil twin attacks in 802.11 wireless networks. I designed a system capable of identifying rogue access points impersonating legitimate networks. Through meticulous testing and validation, the project provided actionable strategies for securing wireless communications and enhancing overall network security.</p>
+        </div>
+        <div class="blog-post">
+            <h3>Volunteering at the Cyber Clinic</h3>
+            <p class="timestamp">Posted on: December 10, 2024</p>
+            <p>Volunteering at the Cyber Clinic gave me the chance to assist individuals and small businesses with their cybersecurity needs. From setting up firewalls to educating users about phishing attacks, this experience allowed me to apply theoretical knowledge to real-world scenarios while making a tangible difference.</p>
+        </div>
     </div>
     <div id="walkthroughs" class="container">
         <h2>Hack The Box Walkthroughs</h2>
@@ -107,4 +153,3 @@
     </footer>
 </body>
 </html>
-
