--- a/website.html
+++ b/website.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Wars & Marvel Themed Website</title>
+    <title>Nathans Blog</title>
     <style>
         /* General Styling */
         body {
@@ -73,7 +73,7 @@
 </head>
 <body>
     <header>
-        <h1>Galaxy Adventures & Hero Chronicles</h1>
+        <h1>Nathans Blog</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
